--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,52 @@
   "name": "server",
 
   "version": "1.0.0",
+
   "description": "",
+
   "main": "index.js",
+
   "scripts": {
+
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "start": "node src/index.js"
+
   },
+
   "author": "",
+
   "license": "ISC",
+
   "dependencies": {
+
+    "axios": "^0.27.2",
+
+    "body-parser": "^1.20.0",
+
     "cors": "^2.8.5",
+
+    "cpf-cnpj-validator": "^1.0.3",
+
     "dotenv": "^16.0.2",
+
     "express": "^4.18.1",
+
+    "libphonenumber-js": "^1.10.13",
+
     "mongoose": "^6.5.3",
-    "nodemon": "^2.0.19"
+
+    "nodemon": "^2.0.19",
+
+    "pagseguro": "^0.1.0",
+
+    "react-router-dom": "^6.3.0",
+
+    "xml2json-light": "^1.0.6",
+
+    "yup": "^0.32.11"
+
   }
+
 }
+
